--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ Corpus_2022/*.xml
 Corpus_2022/*.txt
 Corpus_2022/analyse_pdf/*.xml
 Corpus_2022/analyse_pdf/*.txt
+Corpus_2023_FINAL/*.xml
+Corpus_2023_FINAL/*.txt
+Corpus_2023_FINAL/analyse_pdf/*.xml
+Corpus_2023_FINAL/analyse_pdf/*.txt
