--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ Corpus_2023_FINAL/*.xml
 Corpus_2023_FINAL/*.txt
 Corpus_2023_FINAL/analyse_pdf/*.xml
 Corpus_2023_FINAL/analyse_pdf/*.txt
+Test/__pycache__/*
+src/__pychache__/*
